--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,6 +5,8 @@
 
 <header th:replace="fragments :: header"></header>
 
+<p th:text="${errorMsg}" class="text-danger"> </p>
+
 <form method="post">
     <div class="form-group">
         <label>Name
@@ -14,6 +16,11 @@
     <div class="form-group">
         <label>Description
             <input type="text" name="description" class="form-control">
+        </label>
+    </div>
+    <div class="form-group">
+        <label>Contact Email
+            <input type="text" name="contactEmail" class="form-control">
         </label>
     </div>
     <div class="form-group">
